# memory_pool

./: .gitignore  CMakeLists.txt
src/: main.cc
src/multi_object_pool/: multi_object_pool.hpp
src/variant1/: Readme.md  handle.hpp  object_pool.hpp
src/variant2/: Readme.md  handle.hpp  object_pool.hpp
src/variant3/: handle.hpp  handle_manager.hpp  multi_object_pool.hpp  object_pool.hpp
test/: CMakeLists.txt
test/multi_object_pool/: test_multi_object_pool.cc
test/save_ctor/: test_save_ctor.cc
test/variant1/: CMakeLists.txt  test_variant1.cc
test/variant2/: test_variant2.cc
test/variant3/: test_multi_object_pool.cc  test_variant3.cc
